log/pytorch_job_1789.err
/faststorage/paul/mamba/envs/pytorch_env/lib/python3.10/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.7.3' currently installed).
  from pandas.core.computation.check import NUMEXPR_INSTALLED
Traceback (most recent call last):
  File "/home/paul/projects/CV4RS-main/train.py", line 8, in <module>
    from utils.clients import GlobalClient
  File "/home/paul/projects/CV4RS-main/utils/clients.py", line 493
    elif isinstance(value, torch.Tensor):
    ^
IndentationError: expected an indented block after 'elif' statement on line 491
